[package]
name = "rplayer"
version = "0.1.0"
authors = ["Marco Qin <qyyfy2009@gmail.com>"]
build = "build.rs"

[dependencies]
lava_rs = {git = "https://github.com/MarcoQin/lava-rs.git"}
clap = "~2.32"
ctrlc = { version = "3.0", features = ["termination"] }
rustyline = "4.1.0"
fs_extra = "1.1.0"
lazy_static = "1.1.0"